# ChangeLog

## [0.1] - 2023-12-05
- Code works for basic use. Tests implemented.